add rest/* to security domain

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,6 +16,7 @@
 		<web-resource-collection>
 			<web-resource-name>ExtjsMVCTemplateRealm</web-resource-name>
 			<url-pattern>/json/*</url-pattern>
+			<url-pattern>/rest/*</url-pattern>
 		</web-resource-collection>
 		<auth-constraint>
 			<role-name>user</role-name>
