--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,16 +12,32 @@
 	<security-role>
 		<role-name>user</role-name>
 	</security-role>
+	<security-role>
+		<role-name>admin</role-name>
+	</security-role>
 	<security-constraint>
 		<web-resource-collection>
-			<web-resource-name>ExtjsMVCTemplateRealm</web-resource-name>
+			<web-resource-name>protected-resources</web-resource-name>
 			<url-pattern>/json/*</url-pattern>
 			<url-pattern>/rest/*</url-pattern>
 		</web-resource-collection>
 		<auth-constraint>
 			<role-name>user</role-name>
 		</auth-constraint>
+		<auth-constraint>
+			<role-name>admin</role-name>
+		</auth-constraint>
 	</security-constraint>
+
+	<login-config>
+		<auth-method>FORM</auth-method>
+		<realm-name>ExtjsMVCTemplateRealm</realm-name>
+		<form-login-config>
+			<form-login-page>/index.jsf</form-login-page>
+			<form-error-page>/json/error.json</form-error-page>
+		</form-login-config>
+	</login-config>
+
 	<filter>
 		<filter-name>UTF8Filter</filter-name>
 		<filter-class>com.bitfiction.mvctemplate.util.UTF8Filter</filter-class>
