--- a/src/main/webapp/.sencha/app/production.properties
+++ b/src/main/webapp/.sencha/app/production.properties
@@ -1,18 +1,8 @@
 # =============================================================================
 # This file provides an override point for default variables defined in 
-# build.properties and defaults.properties.
+# production.defaults.properties. These properties are only imported when building
+# for the "production" environment.
 #
-# IMPORTANT - Sencha Cmd will merge your changes with its own during upgrades.
-# To avoid potential merge conflicts avoid making large, sweeping changes to
-# this file.
+# Properties defined in this file take priority over build.properties but are
+# only loaded for "production" builds.
 # =============================================================================
-
-# enable yui compression
-build.compression.yui=1
-
-# enable the full class system optimizer
-build.optimize=${build.optimize.enable}
-
-build.options=${build.options.debug.disable},${build.options.logger.disable}
-build.enable.embedded.manifest=false
-
