--- a/src/main/webapp/app.json
+++ b/src/main/webapp/app.json
@@ -7,11 +7,5 @@
     "id": "4a361d24-b4a5-48e0-8f59-79e8062218aa",
     
         
-    "indexHtmlPath": "index_template.xhtml",
-    
-    "css": [{
-            "path": "resources/css/app.css",
-            "update": "delta"
-        }
-    ]
+    "indexHtmlPath": "index_template.xhtml"
 }
